# ger-wiki

./: .gitignore  Dockerfile  README.md  ger_streamlit.py  main.py  pyproject.toml  requirements.txt
configs/: wiki_bert.jsonnet  wiki_crf.jsonnet  wiki_crf_basic.jsonnet  wiki_distil.jsonnet  wiki_roberta.jsonnet
data_processing/: d1_base_process.py  d2_doccano_process.py
data_processing/data/processed/: wiki_test.conll  wiki_train.conll  wiki_val.conll
data_processing/data/results/: crossval.csv  distil_oog.csv  spacy_oog.csv
data_processing/oog/: distil_oog.py  spacy_oog.py
data_processing/preprocess/: dbpedia_query.py  doccano_functions.py  spaceeval_conll.py
data_processing/processing/: nam_places.py
eval/: crossval.py  significance.py  visualise.py
ger_wiki/: __init__.py  batch_predictor.py  optimisation.py  predictor.py  reader.py
paper/: main.Rmd  main.tex  setup.R
paper/bib/: main.bib
paper/figures/: figure1_template.drawio
paper/tables/: table1_models.R  table2_prebuilt.R  table3_existing.R  table4_transformer_metrics.R  table5_freq.R
tests/: test_dataset_reader.py  test_model.py  test_preprocessing.py
tests/fixtures/doccano_to_conll/: toy_conll.conll  toy_doccano.jsonl
tests/fixtures/model/: test_config.jsonnet
tests/fixtures/predictions_to_doccano/: toy_doccano.jsonl  toy_predictions.jsonl
tests/fixtures/reader/: toy_data.txt
tests/fixtures/split_text/: toy_large.txt
