[tool.poetry]
name = "ger_wiki"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
allennlp = "^1.1.0"
allennlp-models = "^1.1.0"
pandas = "^1.1.0"
jsonlines = "^1.2.0"
sparqlwrapper = "^1.8.5"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
streamlit = "^0.67.1"
optuna = "^2.2.0"
typer = "^0.3.2"
gputil = "^1.4.0"
psutil = "^5.7.2"
stanza = "^1.2"
seqeval = "^1.2.2"
spacy-stanza = "^1.0.0"
# matplotlib = "^3.3.4"
# PyQt5 = "^5.15.6"
geopandas = "^0.10.2"
contextily = "^1.2.0"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
ipdb = "^0.13.3"
isort = "^5.10.1"
pytest = "^6.1.0"
neovim = "^0.3.1"
radian = "^0.5.9"
black = "^20.8b1"
flake8 = "^3.9.0"
sourcery-cli = "^0.9.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
